# dsa-downloader

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
dsa_downloader/: __init__.py  __main__.py  asset_processor.py  cli.py  config_extractor.py  gamedata_downloader.py  language_downloader.py  meta.py  meta_pb2.py  metadata.py
