[metadata]
name = dsa-downloader
url = https://github.com/phstudy/dsa-downloader
description = Disney Sorcerer's Arena resources downloader
long_description = file: README.md
long_description_content_type = text/markdown
author = Study Hsueh
author_email = ph.study@gmail.com
maintainer = Study Hsueh
maintainer_email = ph.study@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Utilities
keywords =
    dsa
    python
    disney

[options]
use_scm_version = True
python_requires = >=3.7
packages = dsa_downloader
zip_safe = False

setup_requires =
  setuptools_scm>=1.15.0
  setuptools_scm_git_archive>=1.0

install_requires =
    requests
    protobuf==3.19.0
    UnityPy==1.6.5.7
    pip
    tqdm
    click
    Pillow

[options.entry_points]
console_scripts =
  dsa-downloader = dsa_downloader.__main__:main

[bdist_wheel]
universal = false
